--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^8.2.1"
   },
   "dependencies": {
+    "react-bootstrap": "^2.9.1",
     "react-router-dom": "^6.20.1"
   }
 }
