--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^8.2.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "react-bootstrap": "^2.9.1",
