--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "react-bootstrap": "^2.9.1",
     "react-router-dom": "^6.20.1",
