--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "html-react-parser": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
