--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "axios": "^1.6.2",
     "html-react-parser": "^5.0.7",
+    "install": "^0.13.0",
+    "npm": "^10.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
