--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.1"
   },
